--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,14 @@
             "request": "launch",
             "type": "dart",
             "program": "example/model_mapper_example.dart"
+        },
+        {
+            "name": "Debug Generator",
+            // "cwd": "example/meal_app",
+            "request": "launch",
+            "program": ".dart_tool/build/entrypoint/build.dart",
+            "type": "dart",
+            "args": ["build"]
         }
     ]
 }
