WIP - building template generators

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,9 +14,9 @@
             "name": "Debug Generator",
             // "cwd": "example/meal_app",
             "request": "launch",
-            "program": ".dart_tool/build/entrypoint/build.dart",
+            "program": "model_mapper/.dart_tool/build/entrypoint/build.dart",
             "type": "dart",
-            "args": ["build"]
+            "args": ["build", "--delete-conflicting-outputs"]
         }
     ]
 }
