Partial support for generics
Generics will only be supported for a single type parameter bound
to IModelBase

--- a/model_mapper/build.yaml
+++ b/model_mapper/build.yaml
@@ -4,6 +4,7 @@ targets:
       model_mapper|model_mapper_generator:
         generate_for:
           - test/generator_test.dart
+          - test/generic_model_test.dart
 
 builders:
   model_mapper_generator:
